--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
   },
   "homepage": "https://github.com/timelaps/promise#readme",
   "devDependencies": {
-    "@timelaps/batterie": "^1.0.73"
+    "@timelaps/batterie": "^1.0.75"
   },
   "dependencies": {
-    "@timelaps/fn": "^1.0.11",
-    "@timelaps/hacks": "^1.0.5",
-    "@timelaps/is": "^1.0.14",
-    "@timelaps/returns": "^1.0.0"
+    "@timelaps/fn": "^1.0.19",
+    "@timelaps/hacks": "^1.0.6",
+    "@timelaps/is": "^1.0.15",
+    "@timelaps/n": "^1.0.33",
+    "@timelaps/returns": "^1.0.2"
   }
 }
